--- a/README
+++ b/README
@@ -1,13 +1,16 @@
 "EtherIP" driver/device support module for EPICS.
 
-Interfaces Allen Bradley PLCs (see www.ab.com) via Ethernet to EPICS IOCs under EPICS R3.13 or R3.14:
+Interfaces Allen Bradley PLCs (see www.ab.com) via Ethernet to EPICS IOCs
  * ControlLogix 5000,
    both original versions with separate controller and ENET module,
    and L8x series that includes a network port in the controller.
  * Compact Logix devices
 
-See http://ics-web.sns.ornl.gov/kasemir/etherip/index.html for more.
+Support EPICS R3.14.8 and higher.
+For earlier version of EPICS base, including R3.13, see tags older than ether_ip-3-0.
 
-See https://github.com/EPICSTools/etherip for a Java version of the basic communication library,
-not connected to an EPCIS IOC.
+See 
+ * http://ics-web.sns.ornl.gov/kasemir/etherip/index.html for more
+ * changes.txt for changes
+ * https://github.com/EPICSTools/etherip for a Java version of the basic communication library, not connected to an EPCIS IOC.
 
