Compile on RHEL 6.9

--- a/changes.txt
+++ b/changes.txt
@@ -7,6 +7,9 @@ in ether_ipApp/src/drvEtherIP.h are updated accordingly,
 so that you can see the current version at runtime via
 drvEtherIP_report.
 
+* 2019, Aug 15
+Allow compilation on older RHEL 6.9, g++ 4.4.7
+
 * 2018, Apr 24
 Default buffer size reduced from 500 to 480.
 
