--- a/changes.txt
+++ b/changes.txt
@@ -7,6 +7,10 @@ in ether_ipApp/src/drvEtherIP.h are updated accordingly,
 so that you can see the current version at runtime via
 drvEtherIP_report.
 
+* 2019, Nov 11
+Andrew Johnson provided fix for warning
+"case value ‘205’ not in enumerated type ‘CN_Services’"
+
 * 2019, Aug 15
 Allow compilation on older RHEL 6.9, g++ 4.4.7
 
