--- a/changes.txt
+++ b/changes.txt
@@ -9,6 +9,7 @@ drvEtherIP_report.
 
 * 2022, Feb 4 ether_ip-3-5
 Make EIP_timeout(ms) configurable.
+Add support for unsigned integer type (0xC7) and string type (0xD0).
 
 * 2021, Sep 3 ether_ip-3-4
 Log port number as decimal, since that's more familiar than hex.
