--- a/changes.txt
+++ b/changes.txt
@@ -8,7 +8,30 @@ so that you can see the current version at runtime via
 drvEtherIP_report.
 
 * Next
-Display unknown CIP types in error messaes as hex (JTGWilson) 
+On Mac OS (Darwin) and Linux X86_64, support CIP LINT and ULINT
+64 bit data types via the int64in and int64out record types.
+These types support LINT and only LINT type tags.
+
+Beware that Channel Access has no 64 bit data type.
+Values from int64in/out records will be transferred as DBR_DOUBLE,
+which uses a total of 64 bits: 52 bits for the mantissa, 11 bits exponent, 1 sign.
+It can represent large as well as small numbers, but with limited granularity.
+It effectively transfers 52 bits of significant detail, that is 13 4-bit nibbles.
+For a 64 bit hex number, which has 16 nibbles, this means that the lowest 3 nibbles are cut
+as the value uses the upper 3 nibbles.
+
+PVAccess has a native 'long' data type for 64 bit integers.
+
+Actual value:        0x000bcdef87654321  0x00abcdef87654321  0x80abcdef87654321     
+Read via PVA long:   0x000BCDEF87654321  0x00ABCDEF87654321  0x80ABCDEF87654321
+Read via DBR_DOUBLE: 0x000BCDEF87654321  0x00ABCDEF87654320  0x80ABCDEF87654400     
+
+Note how numbers that only use the lower 13 nibbles are perfectly transferred via
+both protocols.
+As numbers start to use the upper nibbles, this results in lower nibbles being
+truncated to zero when using Channel Access DBR_DOUBLE.
+
+Display unknown CIP types in error messaes as hex (JTGWilson).
 
 * 2022, Feb 4 ether_ip-3-5
 Make EIP_timeout(ms) configurable.
