--- a/changes.txt
+++ b/changes.txt
@@ -31,6 +31,11 @@ both protocols.
 As numbers start to use the upper nibbles, this results in lower nibbles being
 truncated to zero when using Channel Access DBR_DOUBLE.
 
+Furthermore, versions of the int64in record before EPICS 7.0.6.1
+fail to send monitors unless the lower 32 bits in the value
+change, https://github.com/epics-base/epics-base/pull/191.
+
+Other changes:
 Display unknown CIP types in error messaes as hex (JTGWilson).
 
 * 2022, Feb 4 ether_ip-3-5
