--- a/changes.txt
+++ b/changes.txt
@@ -7,6 +7,9 @@ in ether_ipApp/src/drvEtherIP.h are updated accordingly,
 so that you can see the current version at runtime via
 drvEtherIP_report.
 
+* 2023, Apr 14
+Support LINT on darwin-aarch64.
+
 * 2022, Dec 1
 Support UINT for ai record.
 
